# cp32eth_nucd

./: .gitignore  .gitmodules  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old  test.cxx
.github/workflows/: main.yml
flash_partitions/data/: default
flash_partitions/server/: config.html  index.html  log.html
flash_partitions/server/js/: analog-dial.js  config.js  mdb-item.js  script.js  tc-item.js  tm-item.js  to-item.js  ts-item.js
flash_partitions/server/style/: index.css  to.css
http_server/: config.html  index.html  log.html
http_server/js/: config.js  script.js
http_server/style/: index.css  to.css
main/: CMakeLists.txt  config.h  main.c  main.h  system.c  system.h  uart.c  uart.h  ws_log.c  ws_log.h
main/config/: config.c  config.h  filesystem.c  filesystem.h  structs.h
main/networking/: client_tcp.c  client_tcp.h  ethernet.c  ethernet.h  http_server.c  http_server.h  socket_tcp.c  socket_tcp.h  wifi_ap.c  wifi_ap.h
script/: autover.py  compress_server.sh  download_filesystem.sh
